Repost offline rendering task if GC prevents.

R=
BUG=736429

Review-Url: https://codereview.chromium.org/2959663002
Cr-Commit-Position: refs/heads/master@{#482301}

Former-commit-id: 83bd4101c86370d76a76a0e890d82ae66618f6ba